add pictures to the microposts

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -243,6 +243,35 @@ input {
     margin-right: 10px;
     margin-top: 5px;
   }
+  .image-box {
+    text-align: center;
+    font-size: 18px;
+    margin: auto;
+    width: auto;
+    height: auto;
+  }
+  .thumb {
+    width: 90px;
+    height: 90px;
+    margin: 0.2em -0.7em 3 0;
+  }
+
+  .remove_img_preview {
+    position: relative;
+    top: -25px;
+    right: 5px;
+    background: black;
+    color: white;
+    border-radius: 50px;
+    font-size: 0.9em;
+    padding: 0 0.3em 0;
+    text-align: center;
+    cursor: pointer;
+
+  }
+  .remove_img_preview:before {
+    content: "×";
+  }
 }
 
 aside {
