--- a/app/views/microposts/_micropost.html.erb
+++ b/app/views/microposts/_micropost.html.erb
@@ -3,13 +3,74 @@
   <span class="user"><%= link_to micropost.user.name, micropost.user %></span>
   <span class="content">
     <%= micropost.content %>
-    <%#= image_tag micropost.image.url if micropost.image? %>
+    <%#= image_tag micropost.images.url if micropost.images? %>
     <%# if @micropost.images.attached? %>
+    <%#= image_tag @micropost.images.url %>
 <!--      <image src="<%#=(url_for(@micropost.images)) %>"></image>-->
         <%# end %>
+    <ul>
+      <span><%=micropost.images.count %></span>
+    <% micropost.images.each do |image| %>
+<!--        <span>dkjfkjfdkfkdjk</span>-->
+    <%= image_tag(image.thumb.url)%>
+      <% end %>
+  </ul>
     <%# @micropost.files.each do |file| %>
     <%#= link_to file.filename, file %>
     <%# end %>
+
+    <script>
+        window.onload = function(){
+
+            //Check File API support
+            if(window.File && window.FileList && window.FileReader)
+            {
+                var filesInput = document.getElementById("files");
+
+                filesInput.addEventListener("change", function(event){
+
+                    var files = event.target.files; //FileList object
+                    var output = document.getElementById("result");
+
+                    for(var i = 0; i< files.length; i++)
+                    {
+                        var file = files[i];
+
+                        //Only pics
+                        if(!file.type.match('image'))
+                            continue;
+
+                        var picReader = new FileReader();
+
+                        picReader.addEventListener("load",function(event){
+
+                            var picFile = event.target;
+
+                            var div = document.createElement("div");
+
+                            div.innerHTML = ['<img class="thumb" src="', picFile.result, '" title="', picFile.name, '"/><span class="remove_img_preview"></span>'].join('');
+
+
+
+                            output.insertBefore(div,null);
+                            div.children[1].addEventListener("click", function(event){
+                                div.parentNode.removeChild(div);
+                            });
+
+                        });
+
+                        //Read the image
+                        picReader.readAsDataURL(file);
+                    }
+
+                });
+            }
+            else
+            {
+                console.log("Your browser does not support File API");
+            }
+        }
+    </script>
   </span>
   <span class="timestamp">
     Posted <%= time_ago_in_words(micropost.created_at) %> ago.
@@ -20,4 +81,5 @@
                   data: { confirm: "You sure?" } %>
       <% end %>
   </span>
+
 </li>
